--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.8.1"
 cardview = "1.0.0"
+core = "12.1.1"
 firebaseBom = "33.9.0"
 glide = "4.16.0"
 gson = "2.12.1"
@@ -25,6 +26,7 @@ rxjava3RetrofitAdapter = "3.0.0"
 [libraries]
 cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+core = { module = "com.pierfrancescosoffritti.androidyoutubeplayer:core", version.ref = "core" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
